Fri Jun  6 13:39:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_setstrbuf, io_read): should not shorten the given buffer until
	  read succeeds.  [ruby-core:55951] [Bug #8625]

Fri Jun  6 07:41:41 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: dump empty symbols with a
	  tag so that they can be parsed on input. [Bug #9873] [ruby-core:62825]
	* test/psych/test_symbol.rb: test for change

Thu Jun  5 16:08:39 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_page_sweep): refactoring.

	* gc.c (gc_page_sweep): should not set, but add final_slots into
	  sweep_page->final_slots.

Thu Jun  5 14:36:24 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (jemalloc): check for the header regardless drop-in
	  libjemalloc is found, for `malloc_conf` declaration.

	* version.c (ruby_show_version): show `malloc_conf` if set.
	  [Feature #9113]

	* configure.in (with-jemalloc): also check for header, for ABIs
	  which JEMALLOC_MANGLE is needed, i.e., Mach-O and PE-COFF
	  platforms.  [ruby-core:62939] [Feature #9113]

	* include/ruby/missing.h: include alternative malloc header to
	  replace memory management functions.

	* dln.c, io.c, parse.y, st.c: undef malloc family before
	  re-definition to suppress warnings.

Thu Jun  5 12:52:18 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* man/ruby.1: remove rubyforge entry.

Thu Jun  5 12:45:32 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* misc/README: use github link instead of rubyforge.

Thu Jun  5 10:03:29 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (obj_free): check also FL_PROMOTED bit by RVALUE_OLD_P().

Thu Jun  5 03:45:28 2014  Eric Wong  <e@80x24.org>

	* configure.in: add --with-jemalloc option
	  [ruby-core:62912]

Wed Jun  4 22:28:14 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: introduce RZombie to manage zombie objects.
	  Rewrite finalizing logics with this type.
